--- a/config/prow/core/config.yaml
+++ b/config/prow/core/config.yaml
@@ -49,6 +49,8 @@ deck:
         name: metadata
       required_files:
       - started.json|finished.json
+      optional_files:
+      - podinfo.json
     - lens:
         name: buildlog
         config:
@@ -77,6 +79,10 @@ deck:
         name: junit
       required_files:
       - artifacts/junit.*\.xml
+    - lens:
+        name: podinfo
+      required_files:
+      - podinfo.json
   tide_update_period: 1s
 prowjob_namespace: default
 pod_namespace: test-pods
