--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -242,13 +242,17 @@ presubmits:
   knative/test-infra:
     - repo-settings:
       go112-branches:
-      - release-0.10
+      - legacy  # Doesn't exist, for compatibility purposes only
     - build-tests: true
       dot-dev: true
     - unit-tests: true
       dot-dev: true
     - integration-tests: true
       dot-dev: true
+    - custom-test: check-config
+      dot-dev: true
+      args:
+        - "./test/presubmit-config-check.sh"
 
   knative/caching:
     - repo-settings:
