--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -59,63 +59,63 @@ presubmits:
       optional: true
       args:
       - "--run-test"
-      - "./test/e2e-tests.sh --istio-version 1.3-latest --mesh"
+      - "./test/e2e-basic-entrypoint.sh --istio-version 1.3-latest --mesh"
     - custom-test: istio-1.3-no-mesh
       dot-dev: true
       always_run: false
       optional: true
       args:
       - "--run-test"
-      - "./test/e2e-tests.sh --istio-version 1.3-latest --no-mesh"
+      - "./test/e2e-basic-entrypoint.sh --istio-version 1.3-latest --no-mesh"
     - custom-test: istio-1.4-mesh
       dot-dev: true
       always_run: false
       optional: true
       args:
       - "--run-test"
-      - "./test/e2e-tests.sh --istio-version 1.4-latest --mesh"
+      - "./test/e2e-basic-entrypoint.sh --istio-version 1.4-latest --mesh"
     - custom-test: istio-1.4-no-mesh
       dot-dev: true
       always_run: false
       optional: true
       args:
       - "--run-test"
-      - "./test/e2e-tests.sh --istio-version 1.4-latest --no-mesh"
+      - "./test/e2e-basic-entrypoint.sh --istio-version 1.4-latest --no-mesh"
     - custom-test: gloo-0.17.1
       dot-dev: true
       always_run: false
       optional: true
       args:
       - "--run-test"
-      - "./test/e2e-tests.sh --gloo-version 0.17.1"
+      - "./test/e2e-basic-entrypoint.sh --gloo-version 0.17.1"
     - custom-test: kourier-stable
       dot-dev: true
       always_run: false
       optional: true
       args:
         - "--run-test"
-        - "./test/e2e-tests.sh --kourier-version stable"
+        - "./test/e2e-basic-entrypoint.sh --kourier-version stable"
     - custom-test: contour-latest
       dot-dev: true
       always_run: false
       optional: true
       args:
         - "--run-test"
-        - "./test/e2e-tests.sh --contour-version latest"
+        - "./test/e2e-basic-entrypoint.sh --contour-version latest"
     - custom-test: ambassador-latest
       dot-dev: true
       always_run: false
       optional: true
       args:
         - "--run-test"
-        - "./test/e2e-tests.sh --ambassador-version latest"
+        - "./test/e2e-basic-entrypoint.sh --ambassador-version latest"
     - custom-test: https
       dot-dev: true
       always_run: false
       optional: true
       args:
       - "--run-test"
-      - "./test/e2e-tests.sh --https"
+      - "./test/e2e-basic-entrypoint.sh --https"
     - custom-test: build-tests-go114
       dot-dev: true
       always_run: false
@@ -409,39 +409,39 @@ periodics:
       dot-dev: true
       go113: true
     - custom-job: istio-1.3-mesh
-      full-command: "./test/e2e-tests.sh --istio-version 1.3-latest --mesh"
+      full-command: "./test/e2e-basic-entrypoint.sh --istio-version 1.3-latest --mesh"
       dot-dev: true
       go113: true
     - custom-job: istio-1.3-no-mesh
-      full-command: "./test/e2e-tests.sh --istio-version 1.3-latest --no-mesh"
+      full-command: "./test/e2e-basic-entrypoint.sh --istio-version 1.3-latest --no-mesh"
       dot-dev: true
       go113: true
     - custom-job: istio-1.4-mesh
-      full-command: "./test/e2e-tests.sh --istio-version 1.4-latest --mesh"
+      full-command: "./test/e2e-basic-entrypoint.sh --istio-version 1.4-latest --mesh"
       dot-dev: true
       go113: true
     - custom-job: istio-1.4-no-mesh
-      full-command: "./test/e2e-tests.sh --istio-version 1.4-latest --no-mesh"
+      full-command: "./test/e2e-basic-entrypoint.sh --istio-version 1.4-latest --no-mesh"
       dot-dev: true
       go113: true
     - custom-job: gloo-0.17.1
-      full-command: "./test/e2e-tests.sh --gloo-version 0.17.1"
+      full-command: "./test/e2e-basic-entrypoint.sh --gloo-version 0.17.1"
       dot-dev: true
       go113: true
     - custom-job: kourier-stable
-      full-command: "./test/e2e-tests.sh --kourier-version stable"
+      full-command: "./test/e2e-basic-entrypoint.sh --kourier-version stable"
       dot-dev: true
       go113: true
     - custom-job: contour-latest
-      full-command: "./test/e2e-tests.sh --contour-version latest"
+      full-command: "./test/e2e-basic-entrypoint.sh --contour-version latest"
       dot-dev: true
       go113: true
     - custom-job: ambassador-latest
-      full-command: "./test/e2e-tests.sh --ambassador-version latest"
+      full-command: "./test/e2e-basic-entrypoint.sh --ambassador-version latest"
       dot-dev: true
       go113: true
     - custom-job: https
-      full-command: "./test/e2e-tests.sh --https"
+      full-command: "./test/e2e-basic-entrypoint.sh --https"
       dot-dev: true
       go113: true
     - nightly: true
