--- a/tools/config-generator/templates/prow_config.yaml
+++ b/tools/config-generator/templates/prow_config.yaml
@@ -4,19 +4,20 @@ plank:
   job_url_prefix_config: 
     "*": "[[.ProwHost]]/view/gcs/"
   pod_pending_timeout: 60m
-  default_decoration_config:
-    timeout: 7200000000000 # 2h
-    grace_period: 15000000000 # 15s
-    utility_images:
-      # Update these versions when updating plank version in cluster.yaml
-      clonerefs: "gcr.io/k8s-prow/clonerefs:v20200225-55a0aacbd"
-      initupload: "gcr.io/k8s-prow/initupload:v20200225-55a0aacbd"
-      entrypoint: "gcr.io/k8s-prow/entrypoint:v20200225-55a0aacbd"
-      sidecar: "gcr.io/k8s-prow/sidecar:v20200225-55a0aacbd"
-    gcs_configuration:
-      bucket: "[[.GcsBucket]]"
-      path_strategy: "explicit"
-    gcs_credentials_secret: "test-account"
+  default_decoration_configs:
+    "*":
+      timeout: 2h
+      grace_period: 15s
+      utility_images:
+        # Update these versions when updating plank version in cluster.yaml
+        clonerefs: "gcr.io/k8s-prow/clonerefs:v20200225-55a0aacbd"
+        initupload: "gcr.io/k8s-prow/initupload:v20200225-55a0aacbd"
+        entrypoint: "gcr.io/k8s-prow/entrypoint:v20200225-55a0aacbd"
+        sidecar: "gcr.io/k8s-prow/sidecar:v20200225-55a0aacbd"
+      gcs_configuration:
+        bucket: "[[.GcsBucket]]"
+        path_strategy: "explicit"
+      gcs_credentials_secret: "test-account"
 
 deck:
   spyglass:
@@ -101,7 +102,8 @@ tide:
     knative: squash
     google/knative-gcp: squash
   target_url: [[.ProwHost]]/tide
-  pr_status_base_url: [[.ProwHost]]/pr
+  pr_status_base_urls:
+    '*': [[.ProwHost]]/pr
   blocker_label: tide/merge-blocker
   squash_label: tide/merge-method-squash
   rebase_label: tide/merge-method-rebase
