add build-cluster config

--- a/config/prow/cluster/400-plank.yaml
+++ b/config/prow/cluster/400-plank.yaml
@@ -33,6 +33,7 @@ spec:
         args:
         - --config-path=/etc/config/config.yaml
         - --job-config-path=/etc/job-config
+        - --kubeconfig=/etc/kubeconfig/config
         - --dry-run=false
         volumeMounts:
         - name: oauth
@@ -44,6 +45,9 @@ spec:
         - name: job-config
           mountPath: /etc/job-config
           readOnly: true
+        - name: kubeconfig
+          mountPath: /etc/kubeconfig
+          readOnly: true
       volumes:
       - name: oauth
         secret:
@@ -54,3 +58,7 @@ spec:
       - name: job-config
         configMap:
           name: job-config
+      - name: kubeconfig
+        secret:
+          defaultMode: 0644
+          secretName: kubeconfig
