--- a/config/prow/cluster/400-sinker.yaml
+++ b/config/prow/cluster/400-sinker.yaml
@@ -32,6 +32,7 @@ spec:
         args:
         - --config-path=/etc/config/config.yaml
         - --job-config-path=/etc/job-config
+        - --kubeconfig=/etc/kubeconfig/config
         - --dry-run=false
         volumeMounts:
         - name: config
@@ -40,6 +41,9 @@ spec:
         - name: job-config
           mountPath: /etc/job-config
           readOnly: true
+        - name: kubeconfig
+          mountPath: /etc/kubeconfig
+          readOnly: true
       volumes:
       - name: config
         configMap:
@@ -47,3 +51,7 @@ spec:
       - name: job-config
         configMap:
           name: job-config
+      - name: kubeconfig
+        secret:
+          defaultMode: 0644
+          secretName: kubeconfig
