--- a/config/prow/cluster/400-deck.yaml
+++ b/config/prow/cluster/400-deck.yaml
@@ -44,6 +44,7 @@ spec:
         - --spyglass
         - --config-path=/etc/config/config.yaml
         - --job-config-path=/etc/job-config
+        - --kubeconfig=/etc/kubeconfig/config
         - --oauth-url=/github-login
         - --cookie-secret=/etc/cookie/secret
         ports:
@@ -61,6 +62,9 @@ spec:
           readOnly: true
         - name: cookie-secret
           mountPath: /etc/cookie
+          readOnly: true
+        - name: kubeconfig
+          mountPath: /etc/kubeconfig
           readOnly: true
         livenessProbe:
           httpGet:
@@ -88,6 +92,10 @@ spec:
       - name: cookie-secret
         secret:
           secretName: cookie-secret
+      - name: kubeconfig
+        secret:
+          defaultMode: 0644
+          secretName: kubeconfig
 ---
 apiVersion: v1
 kind: Service
